Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36280

ALTER TABLE require ALTER privilege on sequence from DEFAULT value expression

    XMLWordPrintable

Details

    • Can result in unexpected behaviour

    Description

      --source include/not_embedded.inc
       
      create user 'probsolvdbuser_dev'@'localhost';
      CREATE DATABASE problsolvdbdev;
      GRANT INSERT, UPDATE, ALTER ON problsolvdbdev.* TO 'probsolvdbuser_dev'@'localhost';
      USE problsolvdbdev;
      CREATE SEQUENCE seq_test START WITH 100 INCREMENT BY 10;
      CREATE TABLE action_1 (id int);
       
      connect (conn1,localhost,probsolvdbuser_dev,,problsolvdbdev,);
       
      alter table action_1 modify `id` int(11) NOT NULL DEFAULT nextval(`seq_test`);
       
      connection default;
      drop user  'probsolvdbuser_dev'@'localhost';
      drop databese problsolvdbdev;
      

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              sanja Oleksandr Byelkin
              Votes:
              1 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.