MDEV-36280 ALTER TABLE with DEFAULT NEXTVAL(sequence) fails due to insufficient grants

Fix handling of ALTER TABLE ... DEFAULT NEXTVAL(sequence) so that it
behaves consistently with CREATE TABLE.

For both CREATE TABLE and ALTER TABLE, the current user's grants on
the sequence used in DEFAULT NEXTVAL are irrelevant.

It was also observed that INSERT operations into such tables do not
check sequence grants. This appears to be a legacy behavior that should
be documented and preserved, so a test is added.